cmake_minimum_required(VERSION 3.27)

project(battery LANGUAGES CXX C)

set(SOURCE_FILES
    lib.hpp
    lib.cpp
)

add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})

install(TARGETS ${PROJECT_NAME} 
  EXPORT ${PROJECT_NAME}-config
  ARCHIVE DESTINATION ${OXYGNE_INSTALL_LIB_DIR}
  LIBRARY DESTINATION ${OXYGNE_INSTALL_LIB_DIR}
  RUNTIME DESTINATION ${OXYGNE_INSTALL_BIN_DIR}
)
install(FILES lib.hpp DESTINATION ${OXYGEN_INSTALL_INCLUDE_DIR})
